--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/noticias">Notícias</a></li>
-	        		<li><a href="/atividades">Atividades</a></li>
+	        		<li><a href="/"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+		        	<li><a href="/noticias">News</a></li>
+	        		<li><a href="/atividades">Activities</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
