--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
+			<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 			<link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"rel="stylesheet">
 			<link href="/css/font-awesome.css" rel="stylesheet">
 		</head>
