--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,14 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<!--<link rel="stylesheet" type="text/css" href="/css/main.css">-->
-			<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+			<!--<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 			<link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"rel="stylesheet">
-			<link href="/css/font-awesome.css" rel="stylesheet">
+			<link href="/css/font-awesome.css" rel="stylesheet">-->
 		</head>
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/noticias">News</a></li>
 	        		<li><a href="/atividades">Activities</a></li>
 	        		<li><a href="/blog">Blog</a></li>
