--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
+	        		<li><a href="/"><i class="fa fa-home-2x " aria-hidden="true"></i>Home</a></li>
 		        	<li><a href="/noticias">News</a></li>
 	        		<li><a href="/atividades">Activities</a></li>
 	        		<li><a href="/blog">Blog</a></li>
-	        		<li><i class="fa fa-home" aria-hidden="true"></i></li>
+	        		
 	    		</ul>
 			</nav>
 			<div class="container">
