--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	    			<li><a href="/"><i class="fa fa-home-2x" aria-hidden="true"></i></a></li>
+	    			<li><a href="/"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></li>
 	        		<li><a href="/"><i class="fa fa-home-2x" aria-hidden="true"></i>Home</a></li>
 		        	<li><a href="/noticias">News</a></li>
 	        		<li><a href="/atividades">Activities</a></li>
