--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
 		<body>
 			<nav>
 	    		<ul>
-	    			<li><a href="/"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></li>
-	        		<li><a href="/"><i class="fa fa-home-2x" aria-hidden="true"></i>Home</a></li>
+	    		
+	        		<li><a href="/"><i class="fa fa-home fa-2x" aria-hidden="true"></i>Home</a></li>
 		        	<li><a href="/noticias">News</a></li>
 	        		<li><a href="/atividades">Activities</a></li>
 	        		<li><a href="/blog">Blog</a></li>
