--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,15 @@
 	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				</ul>
+				
+			<ul>
+				<li><a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+				<li><a href=""><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+				<li><a href=""><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+				<li><a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+				
+				
+			</ul>
 			</footer>
 		</body>
 	</html>
