--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,10 @@
 				</ul>
 				
 			<ul>
-				<li><a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-				<li><a href=""><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-				<li><a href=""><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-				<li><a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+				<li><a href=""><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href=""><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href=""><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href=""><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
 				
 				
 			</ul>
