--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,10 @@
 				</ul>
 				
 			<ul>
-				<li><a href=""><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
-				<li><a href=""><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></a></li>
-				<li><a href=""><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
-				<li><a href=""><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.facebook.com/fgv.ibre/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.youtube.com/user/fgvtv"><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href="https://twitter.com/fgv"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
 				
 				
 			</ul>
