--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 			<nav>
 	    		<ul>
 	    		
-	        		<li><a href="/"><i class="fa fa-home fa-2x" aria-hidden="true"></i>Home</a></li>
+	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/noticias">News</a></li>
 	        		<li><a href="/atividades">Activities</a></li>
 	        		<li><a href="/blog">Blog</a></li>
@@ -28,8 +28,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:pedro.guilherme@fgv.br">email</a></li>
+	        		
 				</ul>
 				
 			<ul>
