--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,10 @@
 			<!--<link href="/css/font-awesome.css" rel="stylesheet">-->
 		</head>
 		<body>
+			<div id="center">
+      			<img src="/images/banner_site_pedro.jpg"/>
+    			</div>  
+			
 			<nav>
 	    		<ul>
 	    		
