--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		</head>
 		<body>
 			<div id="center">
-      			<img src="/images/banner_site_pedro.jpg"/>
+      			<img src="/images/banner_site_pedro.jpg" width = auto heigth = auto/>
     			</div>  
 			
 			<nav>
