--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,13 @@
 			<!--<link href="/css/font-awesome.css" rel="stylesheet">-->
 		</head>
 		<body>
-			<div id="center">
-      			<img src="/images/banner_site_pedro.jpg" width = auto heigth = auto/>
-    			</div>  
+			
 			
 			<nav>
+	    		<div id="center">
+      			<img src="/images/banner_site_pedro.jpg" />
+    			</div>  
+	    		
 	    		<ul>
 	    		
 	        		<li><a href="/">Home</a></li>
