--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 			
 			<nav>
 	    		<div id="center">
-      			<img src="/images/banner_site_pedro.jpg"  height=auto width=auto>
+      			<img src="/images/banner_site_pedro.jpg"   width= 80%>
     			</div>  
 	    		
 	    		<ul>
