--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,24 +48,24 @@
 			</ul>
 			</footer>
 			
-			<div class="footer">
-  <div class="footer-inner">
-    <div class="container">
-      <div class="row">
+	<div class="footer">
+  		<div class="footer-inner">
+    			<div class="container">
+      				<div class="row">
       
       
-        <div class="span12"> &copy; 2015 <a href="#">UFF SOS Informação - Responsive</a> <img src="imagens/logo.png" alt="imagem do topo" height="39" width="150">	 <br> 
+        	<div class="span12"> &copy; 2016</a> 	<br> 
         
          <hr>
-         <td><a><h4>SOS Uff comunidade nas redes socias</h4></a>  </td>
+         <td><a><h4></h4></a>  </td>
       
        
         <br> 
-         <ul><a href="#"><i class="icon-facebook"></i>acebook.com/sosuffcomunidade</a></ul>
-            <ul><a href="#"><i class="icon-youtube"></i> youtube.com/sosuffcomunidade</a></ul>
-           
-            <ul><a href="#"><i class="icon-twitter"></i> twitter.com/sosuffcomunidade</a></ul>	
-              <ul><a href="https://www.uff.br"><img class="img-circle pull-right" src="imagens/logo-uff-estilo-google.png" width="66px" height="66px"></ul></a>
+    		<ul>
+				<li><a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
              
          </div>
         <!-- /span12 --> 
