--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,13 +39,13 @@
 				</ul>
 				
 			<ul>
-				<li><a target="_blank" href="https://www.facebook.com/fgv.ibre/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
-				</ul>
-				<ul><li><a target="_blank" href="https://www.youtube.com/user/fgvtv"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a></li>
-				</ul>
-				<ul><li><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
-				</ul>
-				<ul><li><a target="_blank" href="https://twitter.com/fgv"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+			<li><a target="_blank" href="https://www.facebook.com/fgv.ibre/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+			
+			<li><a target="_blank" href="https://www.youtube.com/user/fgvtv"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a></li>
+		
+			<li><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+			
+			<li><a target="_blank" href="https://twitter.com/fgv"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
 			</ul>
 			</footer>
 			
@@ -64,10 +64,13 @@
         <br> 
     		<ul>
 				<li><a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
-				<li><a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a></li>
-				<li><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
-				<li><a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
-             
+			</ul>
+				<ul><li><a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a></li>
+			</ul>
+				<ul><li><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+				</ul>
+				<ul><li><a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+             </ul>
          </div>
         <!-- /span12 --> 
       </div>
