--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,13 +63,13 @@
        
         <br> 
     		<ul>
-				<li><a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
+				<a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
 			</ul>
-				<ul><li><a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a></li>
+				<ul><a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a>
 			</ul>
-				<ul><li><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+				<ul><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
 				</ul>
-				<ul><li><a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+				<ul><a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
              </ul>
          </div>
         <!-- /span12 --> 
