--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,12 +64,12 @@
         <br> 
     		<ul>
 				<a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
-			</ul>
-				<ul><a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a>
-			</ul>
-				<ul><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
-				</ul>
-				<ul><a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+			
+			<a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a>
+			
+				<a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+				
+				<a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
              </ul>
          </div>
         <!-- /span12 --> 
