--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,30 +32,17 @@
 			{{ content }}
 			
 			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:pedro.guilherme@fgv.br">email</a></li>
-	        		
-				</ul>
-				
-			<ul>
-			<li><a target="_blank" href="https://www.facebook.com/fgv.ibre/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
-			
-			<li><a target="_blank" href="https://www.youtube.com/user/fgvtv"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a></li>
-		
-			<li><a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
-			
-			<li><a target="_blank" href="https://twitter.com/fgv"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
-			</ul>
-			</footer>
 			
 	<div class="footer">
   		<div class="footer-inner">
     			<div class="container">
       				<div class="row">
-      
-      
-        	<div class="span12"> &copy; 2016</a> 	<br> 
+			      
+      		
+        	<div class="span12"><ul>
+	        		<li><a href="mailto:pedro.guilherme@fgv.br">email</a></li>
+	        		
+				</ul> &copy; 2016</a> 	<br> 
         
          <hr>
          <td><a><h4></h4></a>  </td>
