--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,9 @@
 			      
       		
         	<div class="span12"><ul>
-	        		<li><a href="mailto:pedro.guilherme@fgv.br">email</a></li>
-	        		
-				</ul> &copy; 2016</a> 	<br> 
+	        <a href="mailto:pedro.guilherme@fgv.br">email</a> &copy; 2016
+	        </ul>		
+					<br> 
         
          <hr>
          <td><a><h4></h4></a>  </td>
