--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,10 @@
       				<div class="row">
 			      
       		
-        	<div class="span12"><ul>
+        	<div class="span12">
 	        <a href="mailto:pedro.guilherme@fgv.br">email</a> &copy; 2016
-	        </ul>		
-					<br> 
+	       		
+	<br> 
         
          <hr>
          <td><a><h4></h4></a>  </td>
@@ -50,14 +50,11 @@
        
         <br> 
     		<ul>
-				<a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
-			
+		        <a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
 			<a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a>
-			
-				<a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
-				
-				<a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
-             </ul>
+			<a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+			<a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                </ul>
          </div>
         <!-- /span12 --> 
       </div>
