--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/noticias">News</a></li>
 	        		<li><a href="/atividades">Activities</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/blog">Comida,politica e datascience/</a></li>
 	        		
 	    		</ul>
 			</nav>
