--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 			
 			<nav>
 	    		<div id="center">
-      			<ul><img src="/images/banner_site_pedro.jpg"   width= 90%></ul>
+      			<!--<ul><img src="/images/banner_site_pedro.jpg"   width= 90%></ul>-->
     			</div>  
 	    		
 	    		<ul>
