--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       		
         	<div class="span12">
         		<br>
-	        <a href="mailto:pedro.guilherme@fgv.br">email</a> &copy; 2016
+	        <!--<a href="mailto:pedro.guilherme@fgv.br">email</a> &copy; 2016-->
 	       		
 	<br> 
         
