--- a/_layouts/blog_layout.html
+++ b/_layouts/blog_layout.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+	<html>
+		<head>
+			<title>{{ page.title }}</title>
+			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
+			<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+			<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+			
+			<link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"rel="stylesheet">
+			<!--<link href="/css/font-awesome.css" rel="stylesheet">-->
+		</head>
+		<body>
+			
+			
+			<nav>
+	    		<div id="center">
+      			<!--<ul><img src="/images/banner_site_pedro.jpg"   width= 90%></ul>-->
+    			</div>  
+	    		
+	    	
+			</nav>
+			<div class="container">
+			
+			{{ content }}
+			
+			</div><!-- /.container -->
+			
+	<div class="footer">
+  		<div class="footer-inner">
+    			<div class="container">
+      				<div class="row">
+			      
+      		
+        	<div class="span12">
+        		<br>
+	        <!--<a href="mailto:pedro.guilherme@fgv.br">email</a> &copy; 2016-->
+	       		
+	<br> 
+        
+         <hr>
+         <td><a><h4></h4></a>  </td>
+      
+       
+        <br> 
+    		<ul>
+		        <a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+			<a target="_blank" href="#"><i class="fa fa-youtube-square fa-2x" aria-hidden="true"></i></a>
+			<a target="_blank" href="https://github.com/pedrocostaferreira"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+			<a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                </ul>
+         </div>
+        <!-- /span12 --> 
+      </div>
+      <!-- /row --> 
+    </div>
+    <!-- /container --> 
+  </div>
+  <!-- /footer-inner --> 
+</div>
 
+<!-- /footer --> 
+		</body>
+	</html>
