--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
 			<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
 			<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+			<link href="css/style.css" rel="stylesheet" type="text/css">
 			
 			<link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"rel="stylesheet">
 			<!--<link href="/css/font-awesome.css" rel="stylesheet">-->
