--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       			<!--<ul><img src="/images/banner_site_pedro.jpg"   width= 90%></ul>-->
     			</div>  
 	    		
-	    		
+	    		<div id="header">   
 	    		<ul>
 	    		
 	        		<li><a href="/">Home</a></li>
@@ -30,6 +30,7 @@
 	        		
 	    		</ul>
 			</nav>
+			</div> 
 			<div class="container">
 			
 			{{ content }}
