--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<!--	<link rel="stylesheet" type="text/css" href="/css/main.css">-->
 			<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
 			<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
 			<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
