--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'Comida,política e data science'; // required: replace example with your forum shortname
+        var disqus_shortname = 'https-pedrocostaferreira-github-io'; // required: replace example with your forum shortname
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
