--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -51,7 +51,7 @@
             
            
      </div><!--/row-->     
-          <hr>
+         
           
         
         </div>
@@ -121,8 +121,8 @@
         </div>
         
       </div><!--/row-->
-      <hr>
-      
+      <br>
+      {% include footer_blog.html %}
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
