--- a/_includes/header_blog.html
+++ b/_includes/header_blog.html
@@ -25,7 +25,7 @@
 				<ul class="nav navbar-nav">
 				  <li><a href="/blog/index.html"><i class="fa fa-home" aria-hidden="true"></i> HOME</a></li>
 					<li><a href="/blog/tags"><i class="fa fa-tags" aria-hidden="true"></i> TAGS</a></li>
-					<li><a href="mailto: jonatha.costa@fgv.br.com"><i class="fa fa-at" aria-hidden="true"></i> CONTACT</a></li>
+					<li><a href="mailto: pedro.guilherme@fgv.br.com"><i class="fa fa-at" aria-hidden="true"></i> CONTACT</a></li>
 					<li><a href="http://pedrocostaferreira.github.io/index.html"><i class="fa fa-user" aria-hidden="true"></i> PEDRO COSTA FERREIRA</a></li>
 				</ul>
 			</div>
