--- a/_includes/footer_site.html
+++ b/_includes/footer_site.html
@@ -4,9 +4,9 @@
       <div class="col-md-4 col-sm-6 footerleft ">
         <div class="logofooter"> Pedro costa ferreira</div>
         <p>Doutor em Engenharia Elétrica - (Decision Support Methods) e Mestre em Economia.</p>
-        <p><i class="fa fa-map-pin"></i>Escritório: Rua Barão de Itambi, nº 60 - Botafogo, RJ</p>
+       <!-- <p><i class="fa fa-map-pin"></i>Escritório: Rua Barão de Itambi, nº 60 - Botafogo, RJ</p>
         <p><i class="fa fa-phone"></i>Phone (Brazil): +55 (21) 3799-6751</p>
-        <p><i class="fa fa-envelope"></i> E-mail : pedro.guilherme@fgv.br</p>
+        <p><i class="fa fa-envelope"></i> E-mail : pedro.guilherme@fgv.br</p> -->
         
       </div>
       <div class="col-md-2 col-sm-6 paddingtop-bottom">
