--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -41,7 +41,7 @@
             
             <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"><span>Teaching</span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-            <li><a href="/graduation.html">Graduation</a></li>
+            <li><a href="/graduation.html">Graduação</a></li>
             <li><a href="/posgraduation.html">Pós-Graduação</a></li>
             
           </ul>
