--- a/_includes/footer_site.html
+++ b/_includes/footer_site.html
@@ -49,7 +49,7 @@
 <div class="copyright">
   <div class="container">
     <div class="col-md-6">
-      <p>© 2016 - Pedro costa ferreira</p>
+      <p>© 2017 - Pedro costa ferreira</p>
     </div>
     <div class="col-md-6">
       <ul class="bottom_ul">
@@ -73,9 +73,9 @@
      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
      <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script> 
     
-     <script src="./Off Canvas Template for Bootstrap_files/jquery.min.js"></script> 
+    <!-- <script src="./Off Canvas Template for Bootstrap_files/jquery.min.js"></script> -->
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-     <script src="./Off Canvas Template for Bootstrap_files/bootstrap.min.js"></script> 
+     <!--<script src="./Off Canvas Template for Bootstrap_files/bootstrap.min.js"></script> -->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!-- <script src="./Off Canvas Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
     <script src="./Off Canvas Template for Bootstrap_files/offcanvas.js"></script> -->
