--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" rel="stylesheet">			
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap.theme.css" rel="stylesheet"> 
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.css" rel="stylesheet"> 
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/css/adicionais.css">
