--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0044)https://getbootstrap.com/examples/offcanvas/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -40,10 +39,12 @@
 			<link rel="stylesheet" type="text/css" rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
 			
 			<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
+				<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
   </head>
 
   <body>
-
+      <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
+	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 {% include header_blog.html %}
        <div class="row">     
           
