--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <link rel="icon" href="https://getbootstrap.com/favicon.ico">
     
-        <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" rel="stylesheet">			
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css" rel="stylesheet">
@@ -19,11 +19,12 @@
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/css/adicionais.css">
+		<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 		</head>
+
 		<body>
 			
 			
-		
 			<nav class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
         <div class="navbar-header">
