--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" rel="stylesheet">			
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.css" rel="stylesheet"> 
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
