--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -44,8 +44,8 @@
             <li><a href="/posgraduation.html">Pós-Graduação</a></li>
             <li><a href="/research.html">Research</a></li>
             <li><a href="/incompany.html">In Company</a></li>
-            <li><a href="/publications.html">Publications</a></li>
-            <li><a href="/about.html">About me</a></li>
+            <li><a href="/publications.html">Publicações</a></li>
+            <li><a href="/about.html">Sobre mim</a></li>
             <li><a href="/blog">Blog</a></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
