--- a/_includes/header_blog.html
+++ b/_includes/header_blog.html
@@ -23,7 +23,8 @@
 			</div>
 			<div class="collapse navbar-collapse pull-right" id="zsxnavcollapse">
 				<ul class="nav navbar-nav">
-				  <li><a href="/blog/index.html"><i class="fa fa-home" aria-hidden="true"></i> HOME</a></li>
+					<li> {% feed_meta  %} </li>
+				    <li><a href="/blog/index.html"><i class="fa fa-home" aria-hidden="true"></i> HOME</a></li>
 					<li><a href="/blog/tags"><i class="fa fa-tags" aria-hidden="true"></i> TAGS</a></li>
 					<li><a href="mailto: pedro.guilherme@fgv.br"><i class="fa fa-at" aria-hidden="true"></i> CONTACT</a></li>
 					<li><a href="http://pedrocostaferreira.github.io/index.html"><i class="fa fa-user" aria-hidden="true"></i> PEDRO COSTA FERREIRA</a></li>
