--- a/_includes/footer_site.html
+++ b/_includes/footer_site.html
@@ -17,23 +17,20 @@
           <li><a href="#"> Blog</a></li>
           <li><a href="#"> Graduation</a></li>
           <li><a href="#"> Terms & Conditions</a></li>
-          <li><a href="#"> Research</a></li>
-          <li><a href="#"> Ranking</a></li>
-          <li><a href="#"> Publications</a></li>
-          <li><a href="#"> Postgraduate</a></li>
         </ul>
       </div>
       <div class="col-md-3 col-sm-6 paddingtop-bottom">
         <h6 class="heading7">LATEST POST</h6>
         <div class="post">
             {% for  post in site.posts limit:3 %}
-                <p>{{ post.title }} <span> {{ post.date | date: '%B ' }}  {{ post.date | date: '%d,' }} {{ post.date | date: ' %Y' }}</span></p>
+                <p><a href="{{ post.url  }}">{{ post.title }}</a> <span> {{ post.date | date: '%B ' }}  {{ post.date | date: '%d,' }} {{ post.date | date: ' %Y' }}</span></p>
             {% endfor %}  
         </div>
       </div>
       <div class="col-md-3 col-sm-6 paddingtop-bottom">
         <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-height="300" data-small-header="false" style="margin-bottom:15px;" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
           <div class="fb-xfbml-parse-ignore">
+            <blockquote cite="https://www.linkedin.com/linkedin"><a href="https://www.linkedin.com/in/pedro-costa-ferreira-b6b22724/">Linkedin</a></blockquote>
             <blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote>
             <blockquote cite="https://www.twitter.com/twitter"><a href="https://www.twitter.com/twitter">Twitter</a></blockquote>
             <blockquote cite="https://www.youtube.com/youtube"><a href="https://www.youtube.com/channel/UC8DhN1cJi0QklBQot5hv_kg">Youtube</a></blockquote>
