--- a/_includes/footer_blog.html
+++ b/_includes/footer_blog.html
@@ -34,6 +34,7 @@
       <div class="col-md-3 col-sm-6 paddingtop-bottom">
         <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-height="300" data-small-header="false" style="margin-bottom:15px;" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
           <div class="fb-xfbml-parse-ignore">
+            <blockquote cite="https://www.linkedin.com/linkedin"><a href="https://www.linkedin.com/in/pedro-costa-ferreira-b6b22724/">Linkedin</a></blockquote>
             <blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote>
             <blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Twitter</a></blockquote>
             <blockquote cite="https://www.youtube.com/youtube"><a href="https://www.youtube.com/channel/UC8DhN1cJi0QklBQot5hv_kg">Youtube</a></blockquote>
