--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -9,16 +9,29 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    
+    <link rel="stylesheet" href="/css/bootstrap.offcanvas.min.css"/>
+    <script src="/js/bootstrap.offcanvas.js"></script>
+    
+    
     <link rel="icon" href="https://getbootstrap.com/favicon.ico">
     
     <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+    
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" rel="stylesheet">			
+		
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" rel="stylesheet">
+		
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css" rel="stylesheet">
+		
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.css" rel="stylesheet"> 
+		
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
+		
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+		
 		<link rel="stylesheet" type="text/css" href="/css/adicionais.css">
+		
 		<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 		</head>
 
