--- a/blog/css/adicionais.css
+++ b/blog/css/adicionais.css
@@ -568,3 +568,21 @@ footer { background-color:#0c1a1e;min-width:100%; min-height:35; font-family: 'O
   border-radius: 35px;
 }
 
+.share-page {
+    text-align: center;
+    background: $secondary-color;
+    color: $light-color;
+    padding: 8px 15px;
+    border-radius: 5px;
+    margin: 1.5 * $spacing-unit 0;
+
+    a {
+        font-weight: 700;
+        color: #fff;
+        margin-left: 10px;
+
+        &:hover {
+            border-bottom: 1px dashed #fff;
+        }
+    }
+}
