--- a/_layouts/default-alternative.html
+++ b/_layouts/default-alternative.html
@@ -33,9 +33,9 @@
         <h4 class="media-heading">{{ post.title }}</h4>
           <a href="blog.html">{{ post.resumo }}</a>
           <hr>
-          <h3><a href="#"><span class="label label-primary"><i class="fa fa-facebook" aria-hidden="true"></i></span></a>
+          <!--<h3><a href="#"><span class="label label-primary"><i class="fa fa-facebook" aria-hidden="true"></i></span></a>
           <a href="#"><span class="label label-info"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
-          <a href="#"><span class="label label-danger"><i class="fa fa-google-plus" aria-hidden="true"></i></span></a></h3>
+          <a href="#"><span class="label label-danger"><i class="fa fa-google-plus" aria-hidden="true"></i></span></a></h3>-->
         </div><!--/.media-body-->
         </div><!--/.media-->
       </li><!--/.li list-group-item-->
