--- a/_includes/header_blog.html
+++ b/_includes/header_blog.html
@@ -3,7 +3,7 @@
 			<div class="row zsx">
 				<div class="col-lg-12 animated lightSpeedIn">
 					<p class="vcenter">
-					<h1><img src="/images/teste.png"></h1>
+					<h1><img src="/images/teste.png" class ="img-responsive"></h1>
 				<h3>Algumas paixões, entre tantas...</h3>
 					</p>
 				</div>
