--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -31,15 +31,15 @@
       
       
 			<link href="/css/bootstrap-responsive.min.css" rel="stylesheet"> 
-			<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" rel="stylesheet">			
-			<link rel="stylesheet" type="text/css" href="/css/adicionais.css" rel="stylesheet">			
-			<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" rel="stylesheet">
-			<link rel="stylesheet" type="text/css" href="/css/bootstrap.css" rel="stylesheet">
-			<link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.css" rel="stylesheet">
-			<link rel="stylesheet" type="text/css" rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+			<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">			
+			<link rel="stylesheet" type="text/css" href="/css/adicionais.css">			
+			<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
+			<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+			<link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.css">
+			<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
 			
 			<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
-				<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+			<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
   </head>
 
   <body>
