--- a/_includes/header_site.html
+++ b/_includes/header_site.html
@@ -16,15 +16,15 @@
     
     <link rel="icon" href="https://getbootstrap.com/favicon.ico">
     
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css">
     
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" rel="stylesheet">			
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">			
 		
-		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
 		
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
 		
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.css" rel="stylesheet"> 
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.css"> 
 		
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
 		
