--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -112,12 +112,13 @@
               <li class="list-group-item"><img class="img-circle" src="/images/pedro.jpg" width="36px" height="36px"> <strong>Pedro Ferreira</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/daiane.jpg" width="36px" height="36px"> <strong>Daiane Marcolino</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/lucas.jpg" width="36px" height="36px"> <strong>Lucas Farias</strong></li>
-              <li class="list-group-item"><img class="img-circle" src="/images/talitha.jpg" width="36px" height="36px"> <strong>Talitha Esperanza</strong></li>
+              <li class="list-group-item"><img class="img-circle" src="/images/talitha.jpg" width="36px" height="36px"> <strong>Talitha Speranza</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/fernando.jpg" width="36px" height="36px"> <strong>Fernando Teixeira</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/jonatha.jpg" width="36px" height="36px"> <strong>Jonatha Azevedo</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/anna.jpg" width="36px" height="36px"> <strong>Anna Carolina</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/bianca.jpg" width="36px" height="36px"> <strong>Bianca Gonçalves</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/ingrid.jpg" width="36px" height="36px"> <strong>Ingrid Luquett</strong></li>
+              <li class="list-group-item"><img class="img-circle" src="/images/ingrid.jpg" width="36px" height="36px"> <strong>guilherme Branco</strong></li>
           </div>
         </div>
         
