--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -118,7 +118,7 @@
               <li class="list-group-item"><img class="img-circle" src="/images/anna.jpg" width="36px" height="36px"> <strong>Anna Carolina</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/bianca.jpg" width="36px" height="36px"> <strong>Bianca Gonçalves</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/ingrid.jpg" width="36px" height="36px"> <strong>Ingrid Luquett</strong></li>
-              <li class="list-group-item"><img class="img-circle" src="/images/ingrid.jpg" width="36px" height="36px"> <strong>guilherme Branco</strong></li>
+              <li class="list-group-item"><img class="img-circle" src="/images/guilherme.jpg" width="36px" height="36px"> <strong>Guilherme Gomes</strong></li>
           </div>
         </div>
         
