insert colabs in blog section

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -118,6 +118,9 @@
               <li class="list-group-item"><img class="img-circle" src="/images/bianca.jpg" width="36px" height="36px"> <strong>Bianca Gonçalves</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/ingrid.jpg" width="36px" height="36px"> <strong>Ingrid Luquett</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/guilherme2.jpg" width="36px" height="36px"> <strong>Guilherme Gomes</strong></li>
+              <li class="list-group-item"><img class="img-circle" src="/images/felipe.jpg" width="36px" height="36px"> <strong>Felipi Silva</strong></li>
+              <li class="list-group-item"><img class="img-circle" src="/images/reira.jpg" width="36px" height="36px"> <strong>Raíra Marotta</strong></li>
+              <li class="list-group-item"><img class="img-circle" src="/images/luana.jpg.jpg" width="36px" height="36px"> <strong>Luana Miranda</strong></li>
           </div>
         </div>
         
