--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -121,7 +121,7 @@
               <li class="list-group-item"><img class="img-circle" src="/images/felipe.jpg" width="36px" height="36px"> <strong>Felipi Silva</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/reira.jpg" width="36px" height="36px"> <strong>Raíra Marotta</strong></li>
               <li class="list-group-item"><img class="img-circle" src="/images/luana.jpg" width="36px" height="36px"> <strong>Luana Miranda</strong></li>
-              <li class="list-group-item"><img class="img-circle" src="/images/luana.jpg" width="36px" height="36px"> <strong>Henrique Almeida</strong></li>
+              <li class="list-group-item"><img class="img-circle" src="/images/" width="36px" height="36px"> <strong>Henrique Almeida</strong></li>
           </div>
         </div>
         
